language/move-lang/tests/move_check/expansion/module_alias_as_type.exp
error: 

   ┌── tests/move_check/expansion/module_alias_as_type.move:7:12 ───
   │
 7 │     foo(x: X) {}
   │            ^ Unexpected module alias 'X'
   ·
 7 │     foo(x: X) {}
   │            - Modules are not types. Try accessing a struct inside the module instead
   │

