language/move-lang/tests/move_check/expansion/module_alias_as_type.move
address 0x1:

module X {}

module M {
    use 0x1::X;
    foo(x: X) {}
}
